@@ -272,7 +272,7 @@ sub help {
     require pf::pfcmd::help;
     my $functionName = "pf::pfcmd::help::help_$service";
     if ( !$service || !defined(&$functionName) ) {
-        pf::pfcmd::help::usage();
+        pf::pfcmd::help::usage($TRUE);
     } else {
         ( $pf::pfcmd::help::{ "help_" . $service } )->();
     }
@@ -2455,7 +2455,7 @@ Copyright (C) 2005 Dave Laporte
 
 Copyright (C) 2005 Kevin Amorin
 
-Copyright (C) 2008-2011 Inverse inc.
+Copyright (C) 2008-2012 Inverse inc.
 
 =head1 LICENSE
 
