@@ -14,7 +14,7 @@ use diagnostics;
 
 use lib '/usr/local/pf/lib';
 
-use Test::More tests => 87;
+use Test::More tests => 88;
 use Test::NoWarnings;
 
 use English '-no_match_vars';
@@ -289,7 +289,7 @@ is_deeply(\%cmd,
           'pfcmd import nodes filename.csv');
 
 # test command line help
-my @output = `/usr/local/pf/bin/pfcmd help 2>&1`;
+my @output = `/usr/local/pf/bin/pfcmd help`;
 my @main_args;
 foreach my $line (@output) {
     if ($line =~ /^([^ ]+) +\|/) {
@@ -304,8 +304,11 @@ foreach my $help_arg (@main_args) {
 }
 
 # required to avoid warnings in admin guide asciidoc build
-`/usr/local/pf/bin/pfcmd help`;
+my @pfcmd_help = `/usr/local/pf/bin/pfcmd help`;
 is($CHILD_ERROR, 0, "pfcmd help exit with status 0"); 
+
+# required to have help placed into the admin guide asciidoc during build
+ok(@pfcmd_help, "pfcmd help outputs on STDOUT"); 
 
 # test version
 @output = `/usr/local/pf/bin/pfcmd version`;
